--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,14 @@ board = esp-wrover-kit
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-build_flags = -DLILYGO_T_CALL_A7670
+build_flags = -D TTGO
+	-DLILYGO_T_CALL_A7670
 	-DTINY_GSM_MODEM_A7670
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
-	-D TINY_GSM_RX_BUFFER=1024
 	-D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
 lib_deps = 
+	arduino-libraries/ArduinoHttpClient@^0.5.0
+	bblanchon/ArduinoJson@^7.0.3
+
 upload_port = COM24
